--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ nav {
   gap: 2rem;
   padding: 1rem;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  overscroll-behavior-y: scroll;
 }
 
 nav a {
@@ -79,15 +80,15 @@ img{border: 1px solid #ccc; border-radius: 8px;}
 <body>
 
   <header>
-    <h1><a href="index.html" style="text-decoration: none;color: #fff;"><span style="background-color: #F44336;padding-left: 15px; padding-right: 15px;border-radius: 10px;">चैतन्य</span> <span style="color:#ffc107;">ग्राफिक्स</span> & <span style="color:#e91e63;">फ़्लेक्स</span> प्रिंटिंग</a></h1>
-    <p style="color: #333; font-size: 1.3rem; background: linear-gradient(110deg, #00BCD4, #FF5722);
+    <h1 style="font-size: x-large;"><a href="index.html" style="text-decoration: none;color: #fff;"><span style="background-color: #F44336;padding-left: 15px; padding-right: 15px;border-radius: 10px;">चैतन्य</span> <span style="color:#ffc107;">ग्राफिक्स</span> & <span style="color:#e91e63;">फ़्लेक्स</span> प्रिंटिंग</a></h1>
+    <p style="color: #333; font-size: 1rem; background: linear-gradient(110deg, #00BCD4, #FF5722);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   display: inline-block;">
     आपल्या ब्रँडसाठी कुशल ग्राफिक्स डिझायनर हवे आहेत का?
   </p>
   <p style="
-  font-size: 1.2rem; 
+  font-size: 1rem; 
   background: linear-gradient(90deg, #E91E63, #FFEB3B);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
