--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>चैतन्य ग्राफिक्स & फ़्लेक्स< प्रिंटिंग | Graphic Designer Portfolio</title>
+  <meta name="description" content="चैतन्य ग्राफिक्स & फ्लेक्स प्रिंटिंग - लग्न पत्रिका, वाढदिवस, हार्दिक शुभेच्छा, जयंती, शाळेसाठी बॅनर्स, छबिना, डोहाळे जेवण व वारकरी बॅनर.">
+  <meta name="keywords" content="चैतन्य ग्राफिक्स, फ्लेक्स प्रिंटिंग, मराठी बॅनर, लग्न पत्रिका, वाढदिवस बॅनर, हार्दिक शुभेच्छा, जयंती पोस्टर, शाळा बॅनर, छबिना डिझाइन, डोहाळे जेवण, वारकरी बॅनर">
+  <meta name="author" content="Chaitanya Graphics">
   <style>
       * {
   margin: 0;
