--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ img {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  background: #F44336;
+  background: #00bcd4;
   color: white;
   width: 50px;
   height: 50px;
