--- a/index.html
+++ b/index.html
@@ -196,6 +196,17 @@ img {
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 1rem;
   }
+  .footer-links {
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
+  
+  .contact-methods {
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
 }
 
 @media (max-width: 480px) {
@@ -214,10 +225,88 @@ img {
   .gallery {
     grid-template-columns: 1fr;
   }
+
   
   h2 {
     font-size: 1.5rem;
   }
+  .social-links {
+    gap: 0.5rem;
+  }
+  
+  .social-icon {
+    width: 36px;
+    height: 36px;
+  }
+}
+/* New Footer Styles */
+.footer-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.footer-links {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+}
+
+.footer-contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.contact-methods {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1.5rem;
+}
+
+.contact-item {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.social-links {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.social-icon {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: rgba(255,255,255,0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s;
+}
+
+.social-icon:hover {
+  background: rgba(255,255,255,0.2);
+  transform: translateY(-3px);
+}
+
+.social-icon svg {
+  width: 20px;
+  height: 20px;
+  fill: #fff;
+}
+
+.copyright {
+  margin-top: 1.5rem;
+  padding-top: 1.5rem;
+  border-top: 1px solid rgba(255,255,255,0.1);
 }
   </style>
 </head>
@@ -370,8 +459,59 @@ img {
   </section> -->
 </main>
 <a href="#" class="back-to-top" id="backToTop" aria-label="Back to top">↑</a>
-  <footer>
-    <p>© 2025 चैतन्य - Graphic Designer</p>
+    <footer>
+    <div class="footer-content">
+      <div class="footer-contact">
+        <h3 style="color: #FFC107;">संपर्क साधा</h3>
+        <div class="contact-methods">
+          <div class="contact-item">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#FFC107" viewBox="0 0 24 24">
+              <path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+            </svg>
+            <a href="mailto:chaithanyagraphics@gmail.com" style="color: #fff; text-decoration: none;">chaithanyagraphics@gmail.com</a>
+          </div>
+          <div class="contact-item">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#FFC107" viewBox="0 0 24 24">
+              <path d="M20.01 15.38c-1.23 0-2.42-.2-3.53-.56-.35-.12-.74-.03-1.01.24l-1.57 1.97c-2.83-1.35-5.48-3.9-6.89-6.83l1.95-1.66c.27-.28.35-.67.24-1.02-.37-1.11-.56-2.3-.56-3.53 0-.54-.45-.99-.99-.99H4.19C3.65 3 3 3.24 3 3.99 3 13.28 10.73 21 20.01 21c.71 0 .99-.63.99-1.18v-3.45c0-.54-.45-.99-.99-.99z"/>
+            </svg>
+            <a href="tel:+919421693269" style="color: #fff; text-decoration: none;">+91 9421693269</a>
+          </div>
+          <div class="contact-item">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#FFC107" viewBox="0 0 24 24">
+              <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
+            </svg>
+            <span style="color: #fff;">Bori,Indapur,Pune, Maharashtra(413104)</span>
+          </div>
+        </div>
+        
+       <!--  <div class="social-links">
+          <a href="https://www.facebook.com/yourpage" class="social-icon" target="_blank" aria-label="Facebook">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"/>
+            </svg>
+          </a>
+          <a href="https://www.instagram.com/yourprofile" class="social-icon" target="_blank" aria-label="Instagram">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M12 2.16c2.67 0 2.99.01 4.04.05 2.74.13 3.77 1.24 3.89 4.04.04 1.05.05 1.37.05 4.04s-.01 2.99-.05 4.04c-.13 2.8-1.15 3.91-3.89 4.04-1.05.04-1.37.05-4.04.05s-2.99-.01-4.04-.05c-2.8-.13-3.91-1.24-4.04-3.89-.04-1.05-.05-1.37-.05-4.04s.01-2.99.05-4.04c.13-2.8 1.24-3.91 3.89-4.04 1.05-.04 1.37-.05 4.04-.05zm0-1.16c-2.72 0-3.07.01-4.13.05-3.57.16-4.94 1.63-5.1 5.1-.04 1.06-.05 1.41-.05 4.13s.01 3.07.05 4.13c.16 3.57 1.53 4.94 5.1 5.1 1.06.04 1.41.05 4.13.05s3.07-.01 4.13-.05c3.57-.16 4.94-1.63 5.1-5.1.04-1.06.05-1.41.05-4.13s-.01-3.07-.05-4.13c-.16-3.57-1.53-4.94-5.1-5.1-1.06-.04-1.41-.05-4.13-.05zm0 3.14a4.86 4.86 0 110 9.72 4.86 4.86 0 010-9.72zm0 1.14a3.72 3.72 0 100 7.44 3.72 3.72 0 000-7.44zm5.89-4.34a1.14 1.14 0 11-2.28 0 1.14 1.14 0 012.28 0z"/>
+            </svg>
+          </a>
+          <a href="https://wa.me/919421693269" class="social-icon" target="_blank" aria-label="WhatsApp">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M16.75 13.96c.25.13.41.2.46.3.06.06.11.04.61-.21 1.18-.2.56-1.24 1.1-1.7 1.12-.46.02-.47.36-2.96-.73-2.49-1.09-3.99-3.75-4.11-3.92-.12-.17-.96-1.38-.92-2.61.05-1.22.69-1.8.95-2.04.24-.26.51-.29.68-.26h.47c.15 0 .36-.06.55.45l.69 1.87c.06.13.1.28.01.44l-.27.41-.39.42c-.12.12-.26.25-.12.5.12.26.62 1.09 1.32 1.78.91.88 1.71 1.44 1.95 1.57.24.14.39.12.54-.04l.81-.94c.19-.25.35-.19.58-.11l1.67.88M12 2a10 10 0 0110 10 10 10 0 01-10 10c-1.97 0-3.8-.57-5.35-1.55L2 22l1.55-4.65A9.96 9.96 0 012 12 10 10 0 0112 2m0 2a8 8 0 00-8 8c0 1.72.54 3.31 1.46 4.61L4.5 19.5l2.89-.96A7.95 7.95 0 0012 20a8 8 0 008-8 8 8 0 00-8-8z"/>
+            </svg>
+          </a>
+          <a href="https://www.youtube.com/yourchannel" class="social-icon" target="_blank" aria-label="YouTube">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path d="M10 15l5.19-3L10 9v6m11.56-7.83c.13.47.22 1.1.28 1.9.07.8.1 1.49.1 2.09L22 12c0 2.19-.16 3.8-.44 4.83-.25.9-.83 1.48-1.73 1.73-.47.13-1.33.22-2.65.28-1.3.07-2.49.1-3.59.1L12 19c-4.19 0-6.8-.16-7.83-.44-.9-.25-1.48-.83-1.73-1.73-.13-.47-.22-1.1-.28-1.9-.07-.8-.1-1.49-.1-2.09L2 12c0-2.19.16-3.8.44-4.83.25-.9.83-1.48 1.73-1.73.47-.13 1.33-.22 2.65-.28 1.3-.07 2.49-.1 3.59-.1L12 5c4.19 0 6.8.16 7.83.44.9.25 1.48.83 1.73 1.73z"/>
+            </svg>
+          </a>
+        </div> -->
+      </div>
+      
+      <div class="copyright">
+        <p>© 2025 चैतन्य ग्राफिक्स & फ़्लेक्स प्रिंटिंग.</p>
+      </div>
+    </div>
   </footer>
 <script>
   document.addEventListener("DOMContentLoaded", function () {
