--- a/index.html
+++ b/index.html
@@ -513,6 +513,15 @@ img {
       </div>
     </div>
   </footer>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LKG6W8513V"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LKG6W8513V');
+</script>
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     const imageLimits = {
